[gd_scene load_steps=3 format=3 uid="uid://8rujtyskfdu2"]

[ext_resource type="PackedScene" uid="uid://ce10vyavw0ujc" path="res://bar.tscn" id="1_5b7ij"]
[ext_resource type="Script" uid="uid://keot24togvqm" path="res://bars.gd" id="1_o1tdx"]

[node name="Bars" type="GridContainer"]
offset_right = 326.0
offset_bottom = 372.0
theme_override_constants/v_separation = 0
columns = 2
script = ExtResource("1_o1tdx")

[node name="Area" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" parent="Area" instance=ExtResource("1_5b7ij")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "+1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Area2" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" parent="Area2" instance=ExtResource("1_5b7ij")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0	"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Area3" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" parent="Area3" instance=ExtResource("1_5b7ij")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label3" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "-1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Area4" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" parent="Area4" instance=ExtResource("1_5b7ij")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label4" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "-2"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Area5" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bar" parent="Area5" instance=ExtResource("1_5b7ij")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
